ingresses/mongodb-express-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongodb-express-ingress
  labels:
    name: mongodb-express-ingress
spec:
  tls:
  - hosts:
    - mongodb-express.com
    secretName: mongo-express-tls
  rules:
  - host: mongodb-express.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mongo-express
            port: 
              number: 30000
